# AHK-Unix

./: .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
data/: ahkunix.desktop  application-x-ahkunix.xml
examples/: ads.ahkl  weather_broadcast.ahkl
include/ahkunix/: AhkParser.hpp  Clipboard.hpp  Daemon.hpp  Errors.hpp  EvdevKeyboard.hpp  Fd.hpp  Hotstring.hpp  KeyboardDetect.hpp  LayoutProfile.hpp  RingBuffer.hpp  Signals.hpp  StringUtil.hpp  UinputKeyboard.hpp
include/ahkunix/commands/: Command.hpp  IfCommand.hpp  ScriptParser.hpp  SendInputCommand.hpp  SleepCommand.hpp  TextCommand.hpp
packaging/deb/: postinst
scripts/: ahkunix-open  clean-full.sh  install-local.sh  setup.sh
src/: AhkParser.cpp  Clipboard.cpp  Daemon.cpp  Errors.cpp  EvdevKeyboard.cpp  Fd.cpp  KeyboardDetect.cpp  LayoutProfile.cpp  RingBuffer.cpp  Signals.cpp  StringUtil.cpp  UinputKeyboard.cpp  main.cpp
src/commands/: IfCommand.cpp  ScriptParser.cpp  SendInputCommand.cpp  SleepCommand.cpp  TextCommand.cpp
tests/: cli_usage.sh
